[metadata]
name = 'lunar'
version = '0.0.1'
description = ''
author = 'Eric Wang'
author_email = 'wrqatw@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/lunar'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
